improve bandmaths operator

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -275,6 +275,7 @@
     "class GraphProcessor():\n",
     "    \n",
     "    def __init__(self):\n",
+    "        \n",
     "        self.root = etree.Element('graph')\n",
     "    \n",
     "        version = etree.SubElement(self.root, 'version')\n",
@@ -326,9 +327,32 @@
     "\n",
     "            for key, value in parameters.iteritems():\n",
     "\n",
-    "                parameter_elem = etree.SubElement(parameters_elem, key)\n",
-    "                parameter_elem.text = value\n",
-    "\n",
+    "                # here I have to adapt the code\n",
+    "                \n",
+    "                if operator == 'BandMaths':\n",
+    "                    \n",
+    "                    if isinstance(value, dict):\n",
+    "                        \n",
+    "                        parameter_elem = etree.SubElement(parameters_elem, key)\n",
+    "                        \n",
+    "                        for key2, value2 in value.iteritems():\n",
+    "                            parameter_elem2 = etree.SubElement(parameter_elem, key2)\n",
+    "                            #parameter_elem.text = value\n",
+    "                            if isinstance(value2, dict):\n",
+    "                                for key3, value3 in value2.iteritems():\n",
+    "                                    parameter_elem3 = etree.SubElement(parameter_elem2, key3)\n",
+    "                                    parameter_elem3.text = value3\n",
+    "                            pass\n",
+    "                    \n",
+    "                    else:\n",
+    "                        parameter_elem = etree.SubElement(parameters_elem, key)\n",
+    "                        parameter_elem.text = value\n",
+    "                else:\n",
+    "                    parameter_elem = etree.SubElement(parameters_elem, key)\n",
+    "                    parameter_elem.text = value\n",
+    "                    \n",
+    "                    \n",
+    "        \n",
     "        node_elem.attrib['id'] = node_id\n",
     "\n",
     "        operator_elem.text = operator \n",
@@ -359,6 +383,8 @@
     "        \n",
     "        try:\n",
     "        \n",
+    "            self.save_graph(filename=path)\n",
+    "            \n",
     "            #options = ['/opt/snap6/bin/gpt',\n",
     "            #   '-x',\n",
     "            #   '-c',\n",
@@ -510,7 +536,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -569,7 +595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -643,7 +669,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -722,7 +748,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -801,7 +827,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -874,7 +900,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -953,7 +979,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -1014,7 +1040,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -1079,7 +1105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -1108,10 +1134,20 @@
     "    else:\n",
     "        parameters[param.getName()] = param.getDefaultValue()\n",
     "    \n",
-    "parameters['targetBands'] = r'<targetBand><name>dif</name><type>float32</type><expression>log(Beta0_VV_mst_04Jun2019 / Beta0_VV_slv1_16Jun2019)</expression><description/><unit/><noDataValue>0.0</noDataValue></targetBand>'\n",
+    "targetbandsdic = {'targetBand': {'name': 'dif', 'type': 'float32', 'expression': 'log(Beta0_VV_mst_07Nov2016 / Beta0_VV_slv1_26Oct2016)', 'description': None, 'unit': None, 'noDataValue': '0.0'}}\n",
+    "\n",
+    "\n",
+    "parameters['targetBands'] = targetbandsdic\n",
     "\n",
     "parameters"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1140,7 +1176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -1201,7 +1237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
