--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -428,6 +428,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Slave preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -435,6 +442,571 @@
    "source": [
     "mygraph = GraphProcessor()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.1. Read s-1 product (slave)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "operator = 'Read'\n",
+    "\n",
+    "index = 0\n",
+    "identifier = input_identifiers[index]\n",
+    "    \n",
+    "parameters = dict()\n",
+    "\n",
+    "for param in get_snap_parameters(operator):\n",
+    "    \n",
+    "    if param.getName() == 'file':\n",
+    "        parameters[param.getName()] = os.path.join(data_path, identifier, identifier + '.SAFE', 'manifest.safe')    \n",
+    "    else:\n",
+    "        parameters[param.getName()] = param.getDefaultValue()\n",
+    "        \n",
+    "node_id = 'Read(%s)' % index\n",
+    "    \n",
+    "read_node = node_id\n",
+    "    \n",
+    "print(parameters)\n",
+    "    \n",
+    "mygraph.add_node(node_id, 'Read', parameters, '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygraph.view_graph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.2. Apply orbit file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "operator = 'Apply-Orbit-File'\n",
+    "\n",
+    "parameters = dict()\n",
+    "\n",
+    "for param in get_snap_parameters(operator):\n",
+    "    \n",
+    "    print(param.getName(), param.getDefaultValue())\n",
+    "    \n",
+    "    parameters[param.getName()] = param.getDefaultValue()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = 0\n",
+    "source_node = read_node\n",
+    "    \n",
+    "node_id = 'Apply-Orbit-File(%s)' % index\n",
+    "    \n",
+    "orbit_node = node_id\n",
+    "    \n",
+    "mygraph.add_node(node_id, 'Apply-Orbit-File', parameters, source_node)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygraph.view_graph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.3. TOPSAR split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "operator = 'TOPSAR-Split'\n",
+    "\n",
+    "parameters = dict()\n",
+    "\n",
+    "for param in get_snap_parameters(operator):\n",
+    "    \n",
+    "    print(param.getName(), param.getDefaultValue())\n",
+    "    \n",
+    "    parameters[param.getName()] = param.getDefaultValue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slave_split_nodes = []\n",
+    "\n",
+    "index_node = 0\n",
+    "source_node = orbit_node\n",
+    "\n",
+    "for index, subswath in enumerate(['IW1', 'IW2', 'IW3']):  \n",
+    "    \n",
+    "    parameters['subswath'] =  subswath\n",
+    "    parameters['selectedPolarisations'] = 'VV'\n",
+    "\n",
+    "    node_id = 'TOPSAR-Split(%s)' % str(index)\n",
+    "    \n",
+    "    \n",
+    "    slave_split_nodes.append(node_id)\n",
+    "\n",
+    "    \n",
+    "    mygraph.add_node(node_id, operator, parameters, source_node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygraph.view_graph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.4. ThermalNoiseRemoval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "operator = 'ThermalNoiseRemoval'\n",
+    "\n",
+    "parameters = dict()\n",
+    "\n",
+    "for param in get_snap_parameters(operator):\n",
+    "    \n",
+    "    print(param.getName(), param.getDefaultValue())\n",
+    "    \n",
+    "    parameters[param.getName()] = param.getDefaultValue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slave_tr_nodes = []\n",
+    "\n",
+    "for index, slave_split_node in enumerate(slave_split_nodes):\n",
+    "    \n",
+    "    node_id = 'ThermalNoiseRemoval(%s)' % index\n",
+    "    \n",
+    "    source_node = slave_split_node\n",
+    "    \n",
+    "    mygraph.add_node(node_id, operator, parameters, source_node)\n",
+    "    \n",
+    "    slave_tr_nodes.append(node_id)\n",
+    "    \n",
+    "    print(node_id)\n",
+    "    \n",
+    "    print(source_node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygraph.view_graph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.5. Calibration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "operator = 'Calibration'\n",
+    "\n",
+    "parameters = dict()\n",
+    "\n",
+    "for param in get_snap_parameters(operator):\n",
+    "    \n",
+    "    print(param.getName(), param.getDefaultValue())\n",
+    "    \n",
+    "    if param.getName() == 'outputSigmaBand':\n",
+    "        parameters[param.getName()] = 'false'\n",
+    "    elif param.getName() == 'outputBetaBand':\n",
+    "        parameters[param.getName()] = 'true'      \n",
+    "    else:\n",
+    "        parameters[param.getName()] = param.getDefaultValue()\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slave_cal_nodes = []\n",
+    "\n",
+    "for index, slave_tr_node in enumerate(slave_tr_nodes):\n",
+    "    \n",
+    "    node_id = 'Calibration(%s)' % index\n",
+    "    \n",
+    "    source_node = slave_tr_node\n",
+    "    \n",
+    "    mygraph.add_node(node_id, operator, parameters, source_node)\n",
+    "    \n",
+    "    slave_cal_nodes.append(node_id)\n",
+    "    \n",
+    "    print(node_id)\n",
+    "    \n",
+    "    print(source_node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygraph.view_graph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.6. TOPSAR-Deburst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "operator = 'TOPSAR-Deburst'\n",
+    "\n",
+    "parameters = dict()\n",
+    "\n",
+    "for param in get_snap_parameters(operator):\n",
+    "    \n",
+    "    print(param.getName(), param.getDefaultValue())\n",
+    "    parameters[param.getName()] = param.getDefaultValue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slave_deb_nodes = []\n",
+    "\n",
+    "for index, slave_cal_node in enumerate(slave_cal_nodes):\n",
+    "    \n",
+    "    node_id = 'TOPSAR-Deburst(%s)' % index\n",
+    "    \n",
+    "    source_node = slave_cal_node\n",
+    "    \n",
+    "    mygraph.add_node(node_id, operator, parameters, source_node)\n",
+    "    \n",
+    "    slave_deb_nodes.append(node_id)\n",
+    "    \n",
+    "    print(node_id)\n",
+    "    \n",
+    "    print(source_node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygraph.view_graph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.7. TOPSAR-Merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "operator = 'TOPSAR-Merge'\n",
+    "\n",
+    "parameters = dict()\n",
+    "\n",
+    "for param in get_snap_parameters(operator):\n",
+    "    \n",
+    "    print(param.getName(), param.getDefaultValue())\n",
+    "    parameters[param.getName()] = param.getDefaultValue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slave_merge_nodes = []\n",
+    "\n",
+    "node_id = 'TOPSAR-Merge(%s)' % str(0)\n",
+    "source_nodes = []\n",
+    "\n",
+    "for index, slave_deb_node in enumerate(slave_deb_nodes):\n",
+    "    \n",
+    "    source_nodes.append(slave_deb_node)\n",
+    "    \n",
+    "mygraph.add_node(node_id, operator, parameters, source_nodes)\n",
+    "\n",
+    "slave_merge_node = node_id\n",
+    "\n",
+    "print(node_id)\n",
+    "    \n",
+    "print(source_nodes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygraph.view_graph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.8. Multilook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "operator = 'Multilook'\n",
+    "\n",
+    "parameters = dict()\n",
+    "\n",
+    "for param in get_snap_parameters(operator):\n",
+    "    \n",
+    "    print(param.getName(), param.getDefaultValue())\n",
+    "    \n",
+    "    if param.getName() == 'nRgLooks':\n",
+    "        parameters[param.getName()] = '4'\n",
+    "    elif param.getName() == 'outputIntensity':\n",
+    "        parameters[param.getName()] = 'true'\n",
+    "    else:\n",
+    "        parameters[param.getName()] = param.getDefaultValue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = 0\n",
+    "    \n",
+    "node_id = 'Multilook(%s)' % index\n",
+    "    \n",
+    "source_node = slave_merge_node\n",
+    "    \n",
+    "mygraph.add_node(node_id, operator, parameters, source_node)\n",
+    "    \n",
+    "slave_ml_node = node_id\n",
+    "    \n",
+    "print(node_id)\n",
+    "    \n",
+    "print(source_node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygraph.view_graph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.9. Write"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "operator = 'Write'\n",
+    "\n",
+    "output_name = 'temp_slave'\n",
+    "\n",
+    "parameters = dict()\n",
+    "\n",
+    "for param in get_snap_parameters(operator):\n",
+    "    \n",
+    "    if param.getName() == 'file':\n",
+    "        \n",
+    "        param_value = output_name\n",
+    "             \n",
+    "    elif param.getName() == 'formatName':\n",
+    "                \n",
+    "        param_value = 'BEAM-DIMAP'\n",
+    "        \n",
+    "    else:\n",
+    "    \n",
+    "        param_value = param.getDefaultValue()\n",
+    "    \n",
+    "    \n",
+    "    print (param.getName(), param_value)\n",
+    "    \n",
+    "    parameters[param.getName()] = param_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygraph.add_node(operator, \n",
+    "             operator, \n",
+    "             parameters,\n",
+    "             slave_ml_node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygraph.view_graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mygraph.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
