divide processing in 3 parts - 2nd part

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -440,6 +440,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "temp_folder = 'temp'\n",
+    "\n",
+    "if not os.path.isdir(temp_folder):\n",
+    "    os.mkdir(temp_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mygraph = GraphProcessor()"
    ]
   },
@@ -898,7 +910,7 @@
    "source": [
     "operator = 'Write'\n",
     "\n",
-    "output_name = 'temp_slave'\n",
+    "output_name_slave = os.path.join(temp_folder, 'temp_slave')\n",
     "\n",
     "parameters = dict()\n",
     "\n",
@@ -906,7 +918,7 @@
     "    \n",
     "    if param.getName() == 'file':\n",
     "        \n",
-    "        param_value = output_name\n",
+    "        param_value = output_name_slave\n",
     "             \n",
     "    elif param.getName() == 'formatName':\n",
     "                \n",
@@ -944,12 +956,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#mygraph.run()"
+    "#### 1.10. Run"
    ]
   },
   {
@@ -957,42 +967,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "mygraph.run()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1012,41 +989,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Read the products"
+    "### 2. Master preprocessing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygraph = GraphProcessor()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.1. Read s-1 product (master)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "operator = 'Read'\n",
     "\n",
-    "read_nodes = []\n",
+    "index = 1\n",
+    "identifier = input_identifiers[index]\n",
+    "    \n",
+    "parameters = dict()\n",
     "\n",
-    "for index, identifier in enumerate(input_identifiers):\n",
+    "for param in get_snap_parameters(operator):\n",
     "    \n",
-    "    parameters = dict()\n",
-    "\n",
-    "    for param in get_snap_parameters(operator):\n",
+    "    if param.getName() == 'file':\n",
+    "        parameters[param.getName()] = os.path.join(data_path, identifier, identifier + '.SAFE', 'manifest.safe')    \n",
+    "    else:\n",
+    "        parameters[param.getName()] = param.getDefaultValue()\n",
+    "        \n",
+    "node_id = 'Read(%s)' % index\n",
     "    \n",
-    "        if param.getName() == 'file':\n",
-    "            parameters[param.getName()] = os.path.join(data_path, identifier, identifier + '.SAFE', 'manifest.safe')    \n",
-    "        else:\n",
-    "            parameters[param.getName()] = param.getDefaultValue()\n",
-    "    node_id = 'Read(%s)' % index\n",
+    "read_node = node_id\n",
     "    \n",
-    "    read_nodes.append(node_id)\n",
+    "print(parameters)\n",
     "    \n",
-    "    print(parameters)\n",
-    "    \n",
-    "    mygraph.add_node(node_id, 'Read', parameters, '')"
+    "mygraph.add_node(node_id, 'Read', parameters, '')"
    ]
   },
   {
@@ -1062,7 +1050,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Apply orbit file"
+    "#### 2.2. Apply orbit file"
    ]
   },
   {
@@ -1079,7 +1067,7 @@
     "    \n",
     "    print(param.getName(), param.getDefaultValue())\n",
     "    \n",
-    "    parameters[param.getName()] = param.getDefaultValue()\n"
+    "    parameters[param.getName()] = param.getDefaultValue()"
    ]
   },
   {
@@ -1088,18 +1076,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orbit_nodes = []\n",
-    "\n",
-    "for index, source_node in enumerate(read_nodes):\n",
+    "index = 1\n",
+    "source_node = read_node\n",
     "    \n",
-    "    node_id = 'Apply-Orbit-File(%s)' % index\n",
+    "node_id = 'Apply-Orbit-File(%s)' % index\n",
     "    \n",
-    "    orbit_nodes.append(node_id)\n",
+    "orbit_node = node_id\n",
     "    \n",
-    "    mygraph.add_node(node_id, 'Apply-Orbit-File', parameters, source_node)\n",
-    "    \n",
-    "print('-----')\n",
-    "print(mygraph)"
+    "mygraph.add_node(node_id, 'Apply-Orbit-File', parameters, source_node)"
    ]
   },
   {
@@ -1108,14 +1092,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mygraph.view_graph()"
+    "mygraph.view_graph()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### TOPSAR split"
+    "#### 2.3. TOPSAR split"
    ]
   },
   {
@@ -1142,23 +1126,22 @@
    "outputs": [],
    "source": [
     "slave_split_nodes = []\n",
-    "master_split_nodes = []\n",
     "\n",
-    "for index_node, source_node in enumerate(orbit_nodes):\n",
-    "    \n",
-    "    for index, subswath in enumerate(['IW1', 'IW2', 'IW3']):  \n",
-    "    \n",
-    "        parameters['subswath'] =  subswath\n",
-    "        parameters['selectedPolarisations'] = 'VV'\n",
+    "index_node = 1\n",
+    "source_node = orbit_node\n",
     "\n",
-    "        node_id = 'TOPSAR-Split(%s)' % str(index_node * 3 + index)\n",
+    "for index, subswath in enumerate(['IW1', 'IW2', 'IW3']):  \n",
     "    \n",
-    "        if index_node == 0:\n",
-    "            slave_split_nodes.append(node_id)\n",
-    "        else:\n",
-    "            master_split_nodes.append(node_id)\n",
+    "    parameters['subswath'] =  subswath\n",
+    "    parameters['selectedPolarisations'] = 'VV'\n",
+    "\n",
+    "    node_id = 'TOPSAR-Split(%s)' % str(index)\n",
     "    \n",
-    "        mygraph.add_node(node_id, operator, parameters, source_node)"
+    "    \n",
+    "    slave_split_nodes.append(node_id)\n",
+    "\n",
+    "    \n",
+    "    mygraph.add_node(node_id, operator, parameters, source_node)"
    ]
   },
   {
@@ -1167,14 +1150,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mygraph.view_graph()"
+    "mygraph.view_graph()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ThermalNoiseRemoval"
+    "#### 2.4. ThermalNoiseRemoval"
    ]
   },
   {
@@ -1201,38 +1184,20 @@
    "outputs": [],
    "source": [
     "slave_tr_nodes = []\n",
-    "master_tr_nodes = []\n",
     "\n",
     "for index, slave_split_node in enumerate(slave_split_nodes):\n",
     "    \n",
     "    node_id = 'ThermalNoiseRemoval(%s)' % index\n",
     "    \n",
-    "    source_nodes = slave_split_nodes[index]\n",
+    "    source_node = slave_split_node\n",
     "    \n",
-    "    mygraph.add_node(node_id, operator, parameters, source_nodes)\n",
+    "    mygraph.add_node(node_id, operator, parameters, source_node)\n",
     "    \n",
     "    slave_tr_nodes.append(node_id)\n",
     "    \n",
     "    print(node_id)\n",
     "    \n",
-    "    print(source_nodes)\n",
-    "    \n",
-    "\n",
-    "\n",
-    "for index, master_split_node in enumerate(master_split_nodes):\n",
-    "    \n",
-    "    node_id = 'ThermalNoiseRemoval(%s)' % str(index + 3)\n",
-    "    \n",
-    "    source_nodes = master_split_nodes[index]\n",
-    "    \n",
-    "    mygraph.add_node(node_id, operator, parameters, source_nodes)\n",
-    "    \n",
-    "    master_tr_nodes.append(node_id)\n",
-    "    \n",
-    "    print(node_id)\n",
-    "    \n",
-    "    print(source_nodes)\n",
-    "    \n"
+    "    print(source_node)"
    ]
   },
   {
@@ -1241,14 +1206,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mygraph.view_graph()"
+    "mygraph.view_graph()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calibration"
+    "#### 2.5. Calibration"
    ]
   },
   {
@@ -1270,8 +1235,7 @@
     "    elif param.getName() == 'outputBetaBand':\n",
     "        parameters[param.getName()] = 'true'      \n",
     "    else:\n",
-    "        parameters[param.getName()] = param.getDefaultValue()\n",
-    "        "
+    "        parameters[param.getName()] = param.getDefaultValue()"
    ]
   },
   {
@@ -1281,37 +1245,20 @@
    "outputs": [],
    "source": [
     "slave_cal_nodes = []\n",
-    "master_cal_nodes = []\n",
     "\n",
     "for index, slave_tr_node in enumerate(slave_tr_nodes):\n",
     "    \n",
     "    node_id = 'Calibration(%s)' % index\n",
     "    \n",
-    "    source_nodes = slave_tr_nodes[index]\n",
+    "    source_node = slave_tr_node\n",
     "    \n",
-    "    mygraph.add_node(node_id, operator, parameters, source_nodes)\n",
+    "    mygraph.add_node(node_id, operator, parameters, source_node)\n",
     "    \n",
     "    slave_cal_nodes.append(node_id)\n",
     "    \n",
     "    print(node_id)\n",
     "    \n",
-    "    print(source_nodes)\n",
-    "    \n",
-    "\n",
-    "\n",
-    "for index, master_tr_node in enumerate(master_tr_nodes):\n",
-    "    \n",
-    "    node_id = 'Calibration(%s)' % str(index + 3)\n",
-    "    \n",
-    "    source_nodes = master_tr_nodes[index]\n",
-    "    \n",
-    "    mygraph.add_node(node_id, operator, parameters, source_nodes)\n",
-    "    \n",
-    "    master_cal_nodes.append(node_id)\n",
-    "    \n",
-    "    print(node_id)\n",
-    "    \n",
-    "    print(source_nodes)"
+    "    print(source_node)"
    ]
   },
   {
@@ -1320,14 +1267,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mygraph.view_graph()"
+    "mygraph.view_graph()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### TOPSAR-Deburst"
+    "#### 2.6. TOPSAR-Deburst"
    ]
   },
   {
@@ -1336,15 +1283,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "operator = 'TOPSAR-Deburst'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "operator = 'TOPSAR-Deburst'\n",
+    "\n",
     "parameters = dict()\n",
     "\n",
     "for param in get_snap_parameters(operator):\n",
@@ -1360,37 +1300,20 @@
    "outputs": [],
    "source": [
     "slave_deb_nodes = []\n",
-    "master_deb_nodes = []\n",
     "\n",
     "for index, slave_cal_node in enumerate(slave_cal_nodes):\n",
     "    \n",
     "    node_id = 'TOPSAR-Deburst(%s)' % index\n",
     "    \n",
-    "    source_nodes = slave_cal_nodes[index]\n",
+    "    source_node = slave_cal_node\n",
     "    \n",
-    "    mygraph.add_node(node_id, operator, parameters, source_nodes)\n",
+    "    mygraph.add_node(node_id, operator, parameters, source_node)\n",
     "    \n",
     "    slave_deb_nodes.append(node_id)\n",
     "    \n",
     "    print(node_id)\n",
     "    \n",
-    "    print(source_nodes)\n",
-    "    \n",
-    "\n",
-    "\n",
-    "for index, master_cal_node in enumerate(master_cal_nodes):\n",
-    "    \n",
-    "    node_id = 'TOPSAR-Deburst(%s)' % str(index + 3)\n",
-    "    \n",
-    "    source_nodes = master_cal_nodes[index]\n",
-    "    \n",
-    "    mygraph.add_node(node_id, operator, parameters, source_nodes)\n",
-    "    \n",
-    "    master_deb_nodes.append(node_id)\n",
-    "    \n",
-    "    print(node_id)\n",
-    "    \n",
-    "    print(source_nodes)"
+    "    print(source_node)"
    ]
   },
   {
@@ -1399,14 +1322,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mygraph.view_graph()"
+    "mygraph.view_graph()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### TOPSAR-Merge"
+    "#### 2.7. TOPSAR-Merge"
    ]
   },
   {
@@ -1432,38 +1355,21 @@
    "outputs": [],
    "source": [
     "slave_merge_nodes = []\n",
-    "master_merge_nodes = []\n",
-    "\n",
-    "\n",
-    "node_id = 'TOPSAR-Merge(%s)' % str(0)\n",
-    "source_nodes = []\n",
-    "for index, slave_deb_node in enumerate(slave_deb_nodes):\n",
-    "    \n",
-    "    source_nodes.append(slave_deb_nodes[index])\n",
-    "    \n",
-    "mygraph.add_node(node_id, operator, parameters, source_nodes)\n",
-    "\n",
-    "slave_merge_nodes.append(node_id)\n",
-    "\n",
-    "print(node_id)\n",
-    "    \n",
-    "print(source_nodes)\n",
-    "    \n",
     "\n",
     "node_id = 'TOPSAR-Merge(%s)' % str(1)\n",
     "source_nodes = []\n",
-    "for index, master_deb_node in enumerate(master_deb_nodes):\n",
+    "\n",
+    "for index, slave_deb_node in enumerate(slave_deb_nodes):\n",
     "    \n",
-    "    source_nodes.append(master_deb_nodes[index])\n",
+    "    source_nodes.append(slave_deb_node)\n",
     "    \n",
     "mygraph.add_node(node_id, operator, parameters, source_nodes)\n",
     "\n",
-    "master_merge_nodes.append(node_id)\n",
+    "slave_merge_node = node_id\n",
     "\n",
     "print(node_id)\n",
     "    \n",
-    "print(source_nodes)\n",
-    "\n"
+    "print(source_nodes)"
    ]
   },
   {
@@ -1472,14 +1378,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mygraph.view_graph()"
+    "mygraph.view_graph()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Multilook"
+    "#### 2.8. Multilook"
    ]
   },
   {
@@ -1510,39 +1416,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "slave_ml_nodes = []\n",
-    "master_ml_nodes = []\n",
-    "\n",
-    "for index, slave_merge_node in enumerate(slave_merge_nodes):\n",
+    "index = 1\n",
     "    \n",
-    "    node_id = 'Multilook(%s)' % index\n",
+    "node_id = 'Multilook(%s)' % index\n",
     "    \n",
-    "    source_nodes = slave_merge_nodes[index]\n",
+    "source_node = slave_merge_node\n",
     "    \n",
-    "    mygraph.add_node(node_id, operator, parameters, source_nodes)\n",
+    "mygraph.add_node(node_id, operator, parameters, source_node)\n",
     "    \n",
-    "    slave_ml_nodes.append(node_id)\n",
+    "slave_ml_node = node_id\n",
     "    \n",
-    "    print(node_id)\n",
+    "print(node_id)\n",
     "    \n",
-    "    print(source_nodes)\n",
-    "    \n",
-    "\n",
-    "\n",
-    "for index, master_merge_node in enumerate(master_merge_nodes):\n",
-    "    \n",
-    "    node_id = 'Multilook(%s)' % str(index + 1)\n",
-    "    \n",
-    "    source_nodes = master_merge_nodes[index]\n",
-    "    \n",
-    "    mygraph.add_node(node_id, operator, parameters, source_nodes)\n",
-    "    \n",
-    "    master_ml_nodes.append(node_id)\n",
-    "    \n",
-    "    print(node_id)\n",
-    "    \n",
-    "    print(source_nodes)"
+    "print(source_node)"
    ]
   },
   {
@@ -1551,14 +1437,200 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mygraph.view_graph()"
+    "mygraph.view_graph()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DEM-Assisted-Coregistration"
+    "#### 2.9. Write"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "operator = 'Write'\n",
+    "\n",
+    "output_name_master = os.path.join(temp_folder, 'temp_master')\n",
+    "\n",
+    "parameters = dict()\n",
+    "\n",
+    "for param in get_snap_parameters(operator):\n",
+    "    \n",
+    "    if param.getName() == 'file':\n",
+    "        \n",
+    "        param_value = output_name_master\n",
+    "             \n",
+    "    elif param.getName() == 'formatName':\n",
+    "                \n",
+    "        param_value = 'BEAM-DIMAP'\n",
+    "        \n",
+    "    else:\n",
+    "    \n",
+    "        param_value = param.getDefaultValue()\n",
+    "    \n",
+    "    \n",
+    "    print (param.getName(), param_value)\n",
+    "    \n",
+    "    parameters[param.getName()] = param_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygraph.add_node(operator, \n",
+    "             operator, \n",
+    "             parameters,\n",
+    "             slave_ml_node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygraph.view_graph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.10. Run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygraph.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygraph = GraphProcessor()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.1. Read slave and master products"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "input_products = [output_name_slave, output_name_master]\n",
+    "\n",
+    "operator = 'Read'\n",
+    "\n",
+    "read_nodes = []\n",
+    "\n",
+    "for index, identifier in enumerate(input_products):\n",
+    "    \n",
+    "    parameters = dict()\n",
+    "\n",
+    "    for param in get_snap_parameters(operator):\n",
+    "    \n",
+    "        if param.getName() == 'file':\n",
+    "            parameters[param.getName()] = os.path.join(identifier + '.dim')    \n",
+    "        else:\n",
+    "            parameters[param.getName()] = param.getDefaultValue()\n",
+    "    node_id = 'Read(%s)' % index\n",
+    "    \n",
+    "    read_nodes.append(node_id)\n",
+    "    \n",
+    "    print(parameters)\n",
+    "    \n",
+    "    mygraph.add_node(node_id, 'Read', parameters, '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygraph.view_graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.2. DEM-Assisted-Coregistration"
    ]
   },
   {
@@ -1595,7 +1667,7 @@
     "\n",
     "node_id = 'DEM-Assisted-Coregistration'\n",
     "\n",
-    "source_nodes = [slave_ml_nodes[0], master_ml_nodes[0]]\n",
+    "source_nodes = read_nodes\n",
     "\n",
     "mygraph.add_node(node_id, operator, parameters, source_nodes)\n",
     "\n",
@@ -1612,7 +1684,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mygraph.view_graph()"
+    "mygraph.view_graph()"
    ]
   },
   {
