divide processing in 3 parts - 3rd part

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -1691,7 +1691,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Speckle-Filter"
+    "#### 3.3. Speckle-Filter"
    ]
   },
   {
@@ -1749,14 +1749,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mygraph.view_graph()"
+    "mygraph.view_graph()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### BandMaths"
+    "#### 3.4. BandMaths"
    ]
   },
   {
@@ -1820,14 +1820,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mygraph.view_graph()"
+    "mygraph.view_graph()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ellipsoid-Correction-RD"
+    "#### 3.5. Ellipsoid-Correction-RD"
    ]
   },
   {
@@ -1881,7 +1881,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mygraph.view_graph()"
+    "mygraph.view_graph()"
    ]
   },
   {
@@ -1919,7 +1919,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_name = 'S1_IFG_%s_%s_%s' % (\"%03d\"%int(search[0]['wrsLongitudeGrid']), \n",
+    "output_name = 'S1_B0CH_%s_%s_%s' % (\"%03d\"%int(search[0]['wrsLongitudeGrid']), \n",
     "                                    parser.parse(start_date).strftime('%Y%m%d_%H%M%S'),\n",
     "                                    parser.parse(end_date).strftime('%Y%m%d_%H%M%S'))"
    ]
