change slave/master input order

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -431,6 +431,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 0. Get metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ciop = cioppy.Cioppy()\n",
+    "\n",
+    "search = ciop.search(end_point=input_references[0],\n",
+    "                     params=[],\n",
+    "                     output_fields='enclosure,identifier,startdate,enddate,wkt,orbitNumber,orbitDirection,swathIdentifier,wrsLongitudeGrid',\n",
+    "                     model='EOP') \n",
+    "\n",
+    "search2 = ciop.search(end_point=input_references[1],\n",
+    "                     params=[],\n",
+    "                     output_fields='enclosure,identifier,startdate,enddate,wkt,orbitNumber,orbitDirection,swathIdentifier,wrsLongitudeGrid',\n",
+    "                     model='EOP')\n",
+    "\n",
+    "# slave image - always the post-event\n",
+    "input_identifiers_slv_mst = []\n",
+    "\n",
+    "if (search[0]['startdate'] < search2[0]['startdate']):\n",
+    "    \n",
+    "    start_date = search[0]['startdate']\n",
+    "    \n",
+    "    input_identifiers_slv_mst.append(input_identifiers[1])\n",
+    "    input_identifiers_slv_mst.append(input_identifiers[0])\n",
+    "    \n",
+    "    mst_date_str = parser.parse(search[0]['startdate']).strftime('%d%b%Y')\n",
+    "    slv_date_str = parser.parse(search2[0]['startdate']).strftime('%d%b%Y')\n",
+    "      \n",
+    "else:\n",
+    "    \n",
+    "    start_date = search2[0]['startdate']\n",
+    "    \n",
+    "    input_identifiers_slv_mst.append(input_identifiers[0])\n",
+    "    input_identifiers_slv_mst.append(input_identifiers[1])\n",
+    "    \n",
+    "    slv_date_str = parser.parse(search[0]['startdate']).strftime('%d%b%Y')\n",
+    "    mst_date_str = parser.parse(search2[0]['startdate']).strftime('%d%b%Y')\n",
+    "\n",
+    "if (search[0]['enddate'] > search2[0]['enddate']):\n",
+    "    end_date = search[0]['enddate']\n",
+    "else:\n",
+    "    end_date = search2[0]['enddate']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1. Slave preprocessing"
    ]
   },
@@ -471,7 +525,7 @@
     "operator = 'Read'\n",
     "\n",
     "index = 0\n",
-    "identifier = input_identifiers[index]\n",
+    "identifier = input_identifiers_slv_mst[index]\n",
     "    \n",
     "parameters = dict()\n",
     "\n",
@@ -497,7 +551,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -546,7 +600,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -604,7 +658,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -660,7 +714,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -722,7 +776,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -777,7 +831,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -833,7 +887,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -892,7 +946,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -972,20 +1026,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1017,7 +1057,7 @@
     "operator = 'Read'\n",
     "\n",
     "index = 1\n",
-    "identifier = input_identifiers[index]\n",
+    "identifier = input_identifiers_slv_mst[index]\n",
     "    \n",
     "parameters = dict()\n",
     "\n",
@@ -1043,7 +1083,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -1092,7 +1132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -1150,7 +1190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -1206,7 +1246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -1267,7 +1307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -1322,7 +1362,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -1378,7 +1418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -1437,7 +1477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -1517,41 +1557,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1585,7 +1590,7 @@
    },
    "outputs": [],
    "source": [
-    "input_products = [output_name_slave, output_name_master]\n",
+    "input_products = [output_name_master, output_name_slave]\n",
     "\n",
     "operator = 'Read'\n",
     "\n",
@@ -1616,7 +1621,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -1684,7 +1689,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -1749,7 +1754,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -1777,21 +1782,16 @@
     "        pass\n",
     "    else:\n",
     "        parameters[param.getName()] = param.getDefaultValue()\n",
-    "    \n",
-    "targetbandsdic = {'targetBand': {'name': 'dif', 'type': 'float32', 'expression': 'log(Beta0_VV_mst_07Nov2016 / Beta0_VV_slv1_26Oct2016)', 'description': None, 'unit': None, 'noDataValue': '0.0'}}\n",
+    "\n",
+    "expression_str = 'log( Beta0_VV_slv1_{0} / Beta0_VV_mst_{1})'.format(slv_date_str, mst_date_str)\n",
+    "        \n",
+    "targetbandsdic = {'targetBand': {'name': 'dif', 'type': 'float32', 'expression': expression_str, 'description': None, 'unit': None, 'noDataValue': '0.0'}}\n",
     "\n",
     "\n",
     "parameters['targetBands'] = targetbandsdic\n",
     "\n",
     "parameters"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1820,7 +1820,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
@@ -1881,36 +1881,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygraph.view_graph()"
+    "#mygraph.view_graph()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "ciop = cioppy.Cioppy()\n",
-    "\n",
-    "search = ciop.search(end_point=input_references[0],\n",
-    "                     params=[],\n",
-    "                     output_fields='enclosure,identifier,startdate,enddate,wkt,orbitNumber,orbitDirection,swathIdentifier,wrsLongitudeGrid',\n",
-    "                     model='EOP') \n",
-    "\n",
-    "search2 = ciop.search(end_point=input_references[1],\n",
-    "                     params=[],\n",
-    "                     output_fields='enclosure,identifier,startdate,enddate,wkt,orbitNumber,orbitDirection,swathIdentifier,wrsLongitudeGrid',\n",
-    "                     model='EOP')\n",
-    "\n",
-    "if (search[0]['startdate'] < search2[0]['startdate']):\n",
-    "    start_date = search[0]['startdate']\n",
-    "else:\n",
-    "    start_date = search2[0]['startdate']\n",
-    "\n",
-    "if (search[0]['enddate'] > search2[0]['enddate']):\n",
-    "    end_date = search[0]['enddate']\n",
-    "else:\n",
-    "    end_date = search2[0]['enddate']"
+    "#### 3.6. Write"
    ]
   },
   {
@@ -1977,12 +1955,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.7. Run"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "mygraph.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### To tiff"
    ]
   },
   {
@@ -1993,7 +1985,7 @@
    "source": [
     "reader = ProductIO.getProductReader(\"BEAM-DIMAP\")\n",
     "\n",
-    "ifg = reader.readProductNodes(output_name + '.dim', None)"
+    "b0ch = reader.readProductNodes(output_name + '.dim', None)"
    ]
   },
   {
@@ -2002,54 +1994,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "band_names = ifg.getBandNames()\n",
-    "target_bands = list(band_names) \n",
-    "target_bands.append(target_bands[0].replace('i_', 'phase_'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "BandDescriptor = jpy.get_type('org.esa.snap.core.gpf.common.BandMathsOp$BandDescriptor')\n",
-    "\n",
-    "targetBands = jpy.array('org.esa.snap.core.gpf.common.BandMathsOp$BandDescriptor', len(target_bands))\n",
-    "\n",
-    "for index, band in enumerate(target_bands):\n",
-    "     \n",
-    "    targetBand = BandDescriptor()\n",
-    "    \n",
-    "    if 'phase_' in band:\n",
-    "       \n",
-    "        targetBand.expression = 'atan2(%s, %s)' % (target_bands[1], target_bands[0])\n",
-    "   \n",
-    "    else:\n",
-    "    \n",
-    "        targetBand.expression = band\n",
-    "\n",
-    "    targetBand.name = band\n",
-    "    targetBand.type = 'float32'\n",
-    "    \n",
-    "    targetBands[index]= targetBand\n",
-    "        \n",
-    "\n",
-    "parameters = HashMap()\n",
-    "parameters.put('targetBands', targetBands)\n",
-    "\n",
-    "result = GPF.createProduct('BandMaths', parameters, ifg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ProductIO.writeProduct(result, \n",
+    "ProductIO.writeProduct(b0ch, \n",
     "                       output_name + '.tif',\n",
     "                       'GeoTIFF-BigTiff')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Metadata"
    ]
   },
   {
@@ -2207,8 +2161,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shutil.rmtree(output_name + '.data')\n",
-    "os.remove(output_name + '.dim')"
+    "shutil.rmtree(temp_folder)\n",
+    "\n",
+    "#shutil.rmtree(output_name + '.data')\n",
+    "#os.remove(output_name + '.dim')"
    ]
   },
   {
